# aicups-201804

./: CMakeLists.txt  CellPrioritizationStrategy.cpp  CellPrioritizationStrategy.h  Const.h  Context.cpp  Context.h  Defines.h  GameConfig.cpp  GameConfig.h  GameHelpers.cpp  GameHelpers.h  KnownPlayer.cpp  KnownPlayer.h  LICENSE  Matrix.cpp  Matrix.h  MaxSpeedStrategy.cpp  MaxSpeedStrategy.h  MovingPoint.h  MyPart.cpp  MyPart.h  Object.cpp  Object.h  Point.cpp  Point.h  README.md  Response.cpp  Response.h  Strategy.cpp  Strategy.h  StrategyManager.cpp  StrategyManager.h  algorithm.h  debug.h  main.cpp  multi_vector.h  overload.h  range.hpp
